--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="canvas" width="320" height="240"></canvas>
 </body>
     <script>
-        const socket = io('ws://localhost:3000');
+        const socket = io();
 
         socket.on('message', text =>{
             console.log(text);
